--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,8 @@ body {
 		--destructive: 0 84.2% 60.2%;
 		--destructive-foreground: 210 40% 98%;
 		--border: hsl(220 13% 0%);
-		--input: 214.3 31.8% 91.4%;
+		--input: 0 0% 3.9%;
+		--inverse-input: 214.3 31.8% 91.4%;
 		--ring: 221.2 83.2% 53.3%;
 		--radius: 0.5rem;
 		--chart-1: 12 76% 61%;
@@ -70,7 +71,8 @@ body {
 		--sidebar-border: 240 3.7% 15.9%;
 		--sidebar-ring: 217.2 91.2% 59.8%;
 		--border: 214.3 31.8% 91.4%;
-		--input: 0 0% 3.9%;
+		--input: 214.3 31.8% 91.4%;
+		--inverse-input: 0 0% 3.9%;
 	}
 }
 @layer base {
